<resources>
    <string name="app_name">OsmBugs</string>
    <string name="pref_clear_tile_cache" translatable="false">pref_clear_tile_cache</string>
    <string name="pref_cache_size" translatable="false">pref_cache_size</string>
    <string name="pref_last_version_code" translatable="false">pref_last_version_code</string>
    <string name="pref_map_style" translatable="false">pref_map_style</string>
    <string name="pref_keepright_enabled_show_tmp_ign" translatable="false">pref_keepright_enabled_show_tmp_ign</string>
    <string name="pref_keepright_enabled_show_ign" translatable="false">pref_keepright_enabled_show_ign</string>
    <string name="pref_keepright_enabled_20" translatable="false">pref_keepright_enabled_20</string>
    <string name="pref_keepright_enabled_30" translatable="false">pref_keepright_enabled_30</string>
    <string name="pref_keepright_enabled_40" translatable="false">pref_keepright_enabled_40</string>
    <string name="pref_keepright_enabled_50" translatable="false">pref_keepright_enabled_50</string>
    <string name="pref_keepright_enabled_60" translatable="false">pref_keepright_enabled_60</string>
    <string name="pref_keepright_enabled_70" translatable="false">pref_keepright_enabled_71</string>
    <string name="pref_keepright_enabled_90" translatable="false">pref_keepright_enabled_90</string>
    <string name="pref_keepright_enabled_100" translatable="false">pref_keepright_enabled_100</string>
    <string name="pref_keepright_enabled_110" translatable="false">pref_keepright_enabled_110</string>
    <string name="pref_keepright_enabled_120" translatable="false">pref_keepright_enabled_120</string>
    <string name="pref_keepright_enabled_130" translatable="false">pref_keepright_enabled_130</string>
    <string name="pref_keepright_enabled_150" translatable="false">pref_keepright_enabled_150</string>
    <string name="pref_keepright_enabled_160" translatable="false">pref_keepright_enabled_160</string>
    <string name="pref_keepright_enabled_170" translatable="false">pref_keepright_enabled_170</string>
    <string name="pref_keepright_enabled_180" translatable="false">pref_keepright_enabled_180</string>
    <string name="pref_keepright_enabled_191" translatable="false">pref_keepright_enabled_191</string>
    <string name="pref_keepright_enabled_192" translatable="false">pref_keepright_enabled_192</string>
    <string name="pref_keepright_enabled_193" translatable="false">pref_keepright_enabled_193</string>
    <string name="pref_keepright_enabled_194" translatable="false">pref_keepright_enabled_194</string>
    <string name="pref_keepright_enabled_195" translatable="false">pref_keepright_enabled_195</string>
    <string name="pref_keepright_enabled_196" translatable="false">pref_keepright_enabled_196</string>
    <string name="pref_keepright_enabled_197" translatable="false">pref_keepright_enabled_197</string>
    <string name="pref_keepright_enabled_198" translatable="false">pref_keepright_enabled_198</string>
    <string name="pref_keepright_enabled_201" translatable="false">pref_keepright_enabled_201</string>
    <string name="pref_keepright_enabled_202" translatable="false">pref_keepright_enabled_202</string>
    <string name="pref_keepright_enabled_203" translatable="false">pref_keepright_enabled_203</string>
    <string name="pref_keepright_enabled_204" translatable="false">pref_keepright_enabled_204</string>
    <string name="pref_keepright_enabled_205" translatable="false">pref_keepright_enabled_205</string>
    <string name="pref_keepright_enabled_206" translatable="false">pref_keepright_enabled_206</string>
    <string name="pref_keepright_enabled_207" translatable="false">pref_keepright_enabled_207</string>
    <string name="pref_keepright_enabled_208" translatable="false">pref_keepright_enabled_208</string>
    <string name="pref_keepright_enabled_210" translatable="false">pref_keepright_enabled_210</string>
    <string name="pref_keepright_enabled_220" translatable="false">pref_keepright_enabled_220</string>
    <string name="pref_keepright_enabled_231" translatable="false">pref_keepright_enabled_231</string>
    <string name="pref_keepright_enabled_232" translatable="false">pref_keepright_enabled_232</string>
    <string name="pref_keepright_enabled_270" translatable="false">pref_keepright_enabled_270</string>
    <string name="pref_keepright_enabled_281" translatable="false">pref_keepright_enabled_281</string>
    <string name="pref_keepright_enabled_282" translatable="false">pref_keepright_enabled_282</string>
    <string name="pref_keepright_enabled_283" translatable="false">pref_keepright_enabled_283</string>
    <string name="pref_keepright_enabled_284" translatable="false">pref_keepright_enabled_284</string>
    <string name="pref_keepright_enabled_285" translatable="false">pref_keepright_enabled_285</string>
    <string name="pref_keepright_enabled_291" translatable="false">pref_keepright_enabled_291</string>
    <string name="pref_keepright_enabled_292" translatable="false">pref_keepright_enabled_292</string>
    <string name="pref_keepright_enabled_293" translatable="false">pref_keepright_enabled_293</string>
    <string name="pref_keepright_enabled_294" translatable="false">pref_keepright_enabled_294</string>
    <string name="pref_keepright_enabled_300" translatable="false">pref_keepright_enabled_300</string>
    <string name="pref_keepright_enabled_311" translatable="false">pref_keepright_enabled_311</string>
    <string name="pref_keepright_enabled_312" translatable="false">pref_keepright_enabled_312</string>
    <string name="pref_keepright_enabled_313" translatable="false">pref_keepright_enabled_313</string>
    <string name="pref_keepright_enabled_320" translatable="false">pref_keepright_enabled_320</string>
    <string name="pref_keepright_enabled_350" translatable="false">pref_keepright_enabled_350</string>
    <string name="pref_keepright_enabled_360" translatable="false">pref_keepright_enabled_360</string>
    <string name="pref_keepright_enabled_370" translatable="false">pref_keepright_enabled_370</string>
    <string name="pref_keepright_enabled_380" translatable="false">pref_keepright_enabled_380</string>
    <string name="pref_keepright_enabled_390" translatable="false">pref_keepright_enabled_390</string>
    <string name="pref_keepright_enabled_401" translatable="false">pref_keepright_enabled_401</string>
    <string name="pref_keepright_enabled_402" translatable="false">pref_keepright_enabled_402</string>
    <string name="pref_keepright_enabled_411" translatable="false">pref_keepright_enabled_411</string>
    <string name="pref_keepright_enabled_412" translatable="false">pref_keepright_enabled_412</string>
    <string name="pref_keepright_enabled_413" translatable="false">pref_keepright_enabled_413</string>
    <string name="pref_keepright_enabled" translatable="false">pref_keepright_enabled</string>
    <string name="comment">Comment</string>
    <string name="err_failed_to_update_error">Failed to update Error: %s</string>
    <string name="err_failed_to_download_errors">Failed to download Errors:\n%s</string>
    <string name="action_settings">Settings</string>
    <string name="keepright">Keepright</string>
    <string name="ok">OK</string>
    <string name="show_temporary_ignored">Show Temporary Ignored</string>
    <string name="show_ignored">Show Ignored</string>
    <string name="bug_limit">Bug Limit</string>
    <string name="enter_new_limit">Enter new Limit</string>
    <string name="username">Username</string>
    <string name="mapdust">Mapdust</string>
    <string name="wrong_turn">Wrong Turn</string>
    <string name="bad_routing">Bad Routing</string>
    <string name="oneway_road">Oneway Road</string>
    <string name="blocked_street">Blocked Street</string>
    <string name="missing_street">Missing Street</string>
    <string name="roundabout_issue">Roundabout Issue</string>
    <string name="missing_speed_info">Missing Speed Info</string>
    <string name="other">Other</string>
    <string name="show_open_errors">Show Open Bugs</string>
    <string name="openstreetmap_notes">OpenStreetMap Notes</string>
    <string name="osmose">Osmose</string>
    <string name="done">Done</string>
    <string name="map_style">Map Style</string>
    <string name="mapnik">Mapnik</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="public_transport">Public Transport</string>
    <string name="mapquest_osm">Mapquest OSM</string>
    <string name="mapquest_aerial">Mapquest Satellit</string>
    <string name="enabled">Enabled</string>
    <string name="toast_geo_intent_no_app_found">No App found to share the Bug with</string>
    <string name="road_nl" translatable="false">Road NL</string>
    <string name="open_sea_map" translatable="false">Open Sea Map</string>
    <string name="open_topo" translatable="false">Open Topo</string>
    <string name="clear_tile_cache">Clear Tile cache</string>
    <string name="tile_cache_cleared">Tile cache cleared</string>
    <string name="tile_cache_cleared_failed">Failed to clear Tile cache</string>
    <string name="create_error">Create Error</string>
    <string name="max_cache_size">Cache size limit</string>
    <string name="enter_new_cache_size">Enter Cache size limit (MB)</string>
    <string name="pref_openstreetmap_notes_enabled" translatable="false">pref_openstreetmap_notes_enabled</string>
    <string name="pref_openstreetmap_notes_show_closed" translatable="false">pref_openstreetmap_notes_show_closed</string>
    <string name="pref_openstreetmap_notes_bug_limit" translatable="false">pref_openstreetmap_notes_bug_limit</string>
    <string name="pref_mapdust_enabled" translatable="false">pref_mapdust_enabled</string>
    <string name="pref_mapdust_username" translatable="false">pref_mapdust_username</string>
    <string name="pref_mapdust_enabled_open" translatable="false">pref_mapdust_enabled_open</string>
    <string name="pref_mapdust_enabled_closed" translatable="false">pref_mapdust_enabled_closed</string>
    <string name="pref_mapdust_enabled_ignored" translatable="false">pref_mapdust_enabled_ignored</string>
    <string name="pref_mapdust_enabled_wrong_turn" translatable="false">pref_mapdust_enabled_wrong_turn</string>
    <string name="pref_mapdust_enabled_bad_routing" translatable="false">pref_mapdust_enabled_bad_routing</string>
    <string name="pref_mapdust_enabled_oneway_road" translatable="false">pref_mapdust_enabled_oneway_road</string>
    <string name="pref_mapdust_enabled_blocked_street" translatable="false">pref_mapdust_enabled_blocked_street</string>
    <string name="pref_mapdust_enabled_missing_street" translatable="false">pref_mapdust_enabled_missing_street</string>
    <string name="pref_mapdust_enabled_roundabout_issue" translatable="false">pref_mapdust_enabled_roundabout_issue</string>
    <string name="pref_osmose_bug_limit" translatable="false">pref_osmose_bug_limit</string>
    <string name="pref_keepright_enabled_types" translatable="false">pref_keepright_enables_types</string>
    <string name="enabled_error">Enabled Errors</string>
    <string name="show_closed_notes">Show closed Errors</string>
    <string name="pref_osmose_enabled_types" translatable="false">pref_osmose_enabled_types</string>
    <string name="pref_openstreetmap_notes_log_in" translatable="false">pref_openstreetmap_notes_log_in</string>
    <string name="log_in">Login</string>
    <string name="tile_cache_lifetime_override">Tile cache Lifetime override</string>
    <string name="pref_tile_cache_ttl_override" translatable="false">pref_tile_cache_ttl_override</string>
    <string name="pref_tile_cache_ttl_override_dialog_message">Lifetime for each Tile in seconds. 0 = Default Lifetime</string>
    <string name="map">Map</string>
    <string name="storage">Storage</string>
    <string name="pref_osmose_error_level" translatable="false">pref_osmose_error_level</string>
    <string name="level">Level</string>
</resources>