<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/map">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/map_styles"
            android:entryValues="@array/map_styles_id"
            android:key="@string/pref_map_style"
            android:title="@string/map_style" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/openstreetmap_notes">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_openstreetmap_notes_show_closed"
            android:title="@string/show_closed_notes" />
        <EditTextPreference
            android:defaultValue="200"
            android:dialogTitle="@string/enter_new_limit"
            android:key="@string/pref_openstreetmap_notes_bug_limit"
            android:maxLength="5"
            android:inputType="number"
            android:title="@string/bug_limit" />
        <Preference
            android:key="@string/pref_openstreetmap_notes_log_in"
            android:title="@string/log_in" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/keepright">
        <Preference
            android:key="@string/pref_keepright_enabled_types"
            android:title="@string/enabled_error" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/osmose">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/osmose_error_level"
            android:entryValues="@array/osmose_error_level_id"
            android:key="@string/pref_osmose_error_level"
            android:title="@string/level" />
        <Preference
            android:key="@string/pref_osmose_enabled_types"
            android:title="@string/enabled_error" />
        <EditTextPreference
            android:defaultValue="500"
            android:dialogTitle="@string/enter_new_limit"
            android:key="@string/pref_osmose_bug_limit"
            android:maxLength="3"
            android:inputType="number"
            android:title="@string/bug_limit" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/storage">
        <EditTextPreference
            android:key="@string/pref_tile_cache_ttl_override"
            android:title="@string/tile_cache_lifetime_override"
            android:dialogMessage="@string/pref_tile_cache_ttl_override_dialog_message"
            android:inputType="number"
            android:defaultValue="0" />
        <EditTextPreference
            android:dialogTitle="@string/enter_new_cache_size"
            android:key="@string/pref_cache_size"
            android:maxLength="5"
            android:inputType="number"
            android:title="@string/max_cache_size" />
        <Preference
            android:key="@string/pref_clear_tile_cache"
            android:title="@string/clear_tile_cache" />
    </PreferenceCategory>
</PreferenceScreen>